<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/help_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_back_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <!-- 问题 -->
        <LinearLayout
            android:id="@+id/ll_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="28dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/right_hand"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/right_hand"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/right_hand"/>

            <TextView
                android:id="@+id/tv_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/help_question"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <!-- 第一个二维码说明 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <TextView
                    style="@style/help_text_style"
                    android:text="@string/first_step"
                    />

                <TextView
                    style="@style/help_text_style"
                    android:paddingTop="16dp"
                    android:text="@string/second_step"

                    />

                <TextView
                    style="@style/help_text_style"
                    android:paddingTop="16dp"
                    android:text="@string/third_step"
                    />

                <TextView
                    style="@style/help_text_style"
                    android:paddingTop="16dp"
                    android:text="@string/forth_step"
                    />

                <TextView
                    style="@style/help_text_style"
                    android:paddingTop="16dp"
                    android:text="@string/fifth_step"
                    />
            </LinearLayout>
        </LinearLayout>


        <!-- 两个二维码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="48dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_download"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    style="@style/help_text_style"
                    android:layout_width="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/custom_dialog_left_title"
                    android:textSize="15sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_http"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    style="@style/help_text_style"
                    android:layout_width="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/custom_dialog_middle_title"
                    android:textSize="15sp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_connect"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    style="@style/help_text_style"
                    android:layout_width="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/custom_dialog_right_title"
                    android:textSize="15sp"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:visibility="visible"
        android:scaleType="fitXY"
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/scan_vertical_bg"/>

</LinearLayout>